# actix-react-oidc-demo

./: .justfile  README.md  actix-react-oidc-demo.code-workspace  docker-compose.werf.yml  docker-compose.yml  werf.yaml
.helm/templates/: actix-react-oidc-backend-deployment.yaml  actix-react-oidc-backend-ingress.yaml  actix-react-oidc-backend-service.yaml  actix-react-oidc-keycloak-deployment.yaml  actix-react-oidc-keycloak-ingress.yaml  actix-react-oidc-keycloak-service.yaml  actix-react-oidc-keycloakdb-ingress.yaml  actix-react-oidc-keycloakdb-service.yaml  actix-react-oidc-keycloakdb-statefulset.yaml  actix-react-oidc-network-networkpolicy.yaml  actix-react-oidc-web-deployment.yaml  actix-react-oidc-web-ingress.yaml  actix-react-oidc-web-service.yaml  keycloak-realm-configmap.yaml
.keycloak/: realm-export.json
docs/: docker-deployment.md  minikube-deployment.md
src/backend/: .dockerignore  Cargo.toml  Dockerfile  KubernetesLocalProcessConfig.yaml
src/backend/src/: auth.rs  endpoints.rs  main.rs
src/react/: .justfile  Dockerfile  package.json
src/react/public/: OidcTrustedDomains.js
src/react/src/: App.tsx  auth.config.tsx  index.tsx
src/react/src/components/NavMenu/: index.tsx  styles.ts
src/react/src/pages/: Securedpage.tsx
src/web/: .justfile  Dockerfile
src/web/public/: OidcTrustedDomains.js
src/web/src/: auth.config.tsx  index.tsx
src/web/src/components/NavMenu/: index.tsx
src/web/src/helpers/: PrivateRoute.tsx
