[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"
once_cell = "1.4"
aliri = "0.6.1"
aliri_oauth2 = "0.9.0"
aliri_actix = "0.8.0"